# Build2Break

./: README.md
enterprise_ares_hr_automation_platform_v1_crewai-project/: README.md  key.env  pyproject.toml
enterprise_ares_hr_automation_platform_v1_crewai-project/src/enterprise_ares_hr_automation_platform/: crew.py  main.py
enterprise_ares_hr_automation_platform_v1_crewai-project/src/enterprise_ares_hr_automation_platform/config/: agents.yaml  tasks.yaml
hr-multi-agent-system/: .env  App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
hr-multi-agent-system/components/: AgentSelector.tsx  Manager.tsx  MultiAgentProcessor.tsx  Onboarder.tsx  PolicyQA.tsx  TalentScout.tsx
hr-multi-agent-system/components/common/icons/: ManagerIcon.tsx  UserCheckIcon.tsx
hr-multi-agent-system/services/: agentOrchestrator.ts  bulkResumeService.ts  geminiService.ts  memoryService.ts  validationService.ts
hr-multi-agent-system/styles/: custom.css
