[project]
name = "enterprise_ares_hr_automation_platform"
version = "0.1.0"
description = "enterprise_ares_hr_automation_platform using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
enterprise_ares_hr_automation_platform = "enterprise_ares_hr_automation_platform.main:run"
run_crew = "enterprise_ares_hr_automation_platform.main:run"
train = "enterprise_ares_hr_automation_platform.main:train"
replay = "enterprise_ares_hr_automation_platform.main:replay"
test = "enterprise_ares_hr_automation_platform.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
